Updated User to Entity instead and added endpoint
Changed all mentions of User to Entity that I could see/find/understand. There are some left to change, specifically in the tests and mocks.

Added another endpoint to return an Entity by its ID rather than just by its name.
